syntax = "proto3";

package auth;
import "common.proto";

service UsersService {
  rpc CreateUser (CreateUserDto) returns (common.User);
  rpc Login (LoginDto) returns (UserAndToken);
  rpc refreshToken (Empty) returns (ResRefreshToken);
}

message PaginationDto {
  int32 page = 1;
  int32 skip = 2;
}

message FindOneUserDto {
  int32 id = 1;
}

message Empty {};

message Users {
  repeated common.User users = 1;
}

message UserAndToken {
  common.User user = 1;
  string accessTokenCookie = 2;
  string refreshTokenCookie = 3;
}

message ResRefreshToken {
  common.User user = 1;
  string accessTokenCookie = 2;
}



message CreateUserDto {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  common.Address address = 6;
}

message LoginDto {
  string email = 1;
  string password = 2;
}

message SocialMedia {
  optional string twitterUri = 1;
  optional string fbUri = 2;
}