syntax = "proto3";

package common;

message Post {
    int32 id = 1;
    string title = 2;
    string content = 3;
    User author = 4;
}

message Category {
    int32 id = 1;
    string name = 2;
}

message Empty {}

message User {
    int32 id = 1;
    string email  = 2;
    string firstName = 3;
    string lastName = 4;
    string password = 5;
    optional Address address = 6;
    optional string currentHashedRefreshToken = 7;
    repeated Post posts = 8;
}

message Address {
    int32 id = 1;
    string street = 2;
    string city = 3;
    string country = 4;
}